# AlgoProbGen

./: .env.example  .gitignore  AUTHORS  LICENSE  Makefile  README.md  ROADMAP.md  init  main.py  pyproject.toml
algogen/: __init__.py  agent.py  cli.py  config.py
algogen/utils/bench_agent/: agent.py  problem.py  solution.py
algogen/utils/desc_agent/: __init__.py  agent.py
algogen/utils/problem_spec/: spec.py
db/: 1000.md  1001.md
src/: basic.py  example.py
src/algogen/: __init__.py  cli.py  config.py  workflow.py
src/algogen/bench_agent/: __init__.py  agent.py  problem.py  solution.py
src/algogen/desc_agent/: agent.py
src/algogen/problem_spec/: __init__.py  spec.py
template/: 1000.py  1001.py
